fix: overflow when there are a lot of items on small screens

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -103,6 +103,7 @@ body {
 
 .nav {
   display: flex;
+  flex-wrap: wrap;
   gap: 2rem;
   margin: 1.5rem 0;
 }
